--- a/app/src/main/res/drawable-v21/view.xml
+++ b/app/src/main/res/drawable-v21/view.xml
@@ -5,7 +5,7 @@
     tools:targetApi="lollipop">
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" /> <!-- background color -->
+            <solid android:color="@color/background_sub" /> <!-- background color -->
         </shape>
     </item>
 </ripple>
