--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -134,9 +134,9 @@
                 android:id="@+id/weatherImageView"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
+                android:layout_alignParentLeft="true"
                 android:layout_gravity="center"
-                android:layout_marginRight="8dp"
-                android:layout_alignParentLeft="true" />
+                android:layout_marginRight="8dp" />
 
             <TextView
                 android:id="@+id/locationTextView"
@@ -226,16 +226,53 @@
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/pictureImageView"
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/photo_view_pager"
+                android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
                 android:layout_margin="10dp"
-                android:padding="5dp"
-                android:scaleType="centerInside"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
+            <LinearLayout
+                android:id="@+id/photo_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|bottom"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"
+                android:orientation="horizontal"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="@drawable/gray_ellipse">
+
+                <TextView
+                    android:id="@+id/current_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:textSize="13sp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="/"
+                    android:textSize="13sp"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/total_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2"
+                    android:textSize="13sp"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
         </FrameLayout>
 
         <LinearLayout
