--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- new -->
+    <color name="background_number_indicator">#88303032</color>
+
     <color name="background">#212121</color>
     <color name="background_sub">#363636</color>
     <color name="border">#272727</color>
@@ -26,7 +29,6 @@
     <color name="yellow">#FFD400</color>
     <color name="orange">#FF7F00</color>
     <color name="pink">#FFB6C1</color>
-    <!-- 다크모드 -->
     <color name="azure">#F1FFFF</color>
     <color name="azure2">#F9FFFF</color>
     <color name="transparent">#00000000</color>
