--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- 일반모드 -->
+    <!-- new -->
+    <color name="background_number_indicator">#88000000</color>
+
     <color name="background">#F8F8FF</color>
     <color name="background_sub">#FFFFFFFF</color>
     <color name="border">#DEDEFF</color>
