--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -31,7 +31,6 @@
             android:id="@+id/starButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="2dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/deleteButton"
             android:background="@drawable/circle_view"
@@ -42,7 +41,6 @@
             android:id="@+id/deleteButton"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="2dp"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/saveButton"
             android:background="@drawable/circle_view"
@@ -128,7 +126,8 @@
                     android:layout_centerVertical="true"
                     android:background="@color/background"
                     android:hint="위치정보 입력"
-                    android:maxLines="1"
+                    android:maxLength="10"
+                    android:singleLine="true"
                     android:textColor="@color/pastel_700"
                     android:textColorHint="@color/pastel_700"
                     android:textSize="12dp" />
